# research-reading-agent

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-paperweave-chroma.txt  requirements-paperweave-optional.txt  requirements-paperweave-reranker.txt  requirements.txt
app/: main.py
docs/: agent_architecture.md  core_api_checklist.md  feishu_console_setup_windows.md  project_freeze_checklist.md  rag_v1_quality_boundary.md  rag_v2_context_pack.md  windows_deployment_feishu_debug.md  windows_feishu_agent_handoff.md
eval/: golden_queries.example.jsonl
frontend/: README.md  streamlit_app.py
scripts/: demo_curl_examples.sh  demo_research_tool_mux.py  demo_tool_mux.py  eval_rag_v2.py  smoke_rag_v2.py
tests/: conftest.py  test_agent_argument_resolver.py  test_agent_fallback_routing.py  test_agent_multi_step.py  test_agent_query_endpoint.py  test_agent_rag_evaluation_tool.py  test_agent_rag_evidence_evaluation_tool.py  test_agent_rag_tool.py  test_agent_rag_trace_tool.py  test_agent_tool_mux_integration.py  test_agent_workflow_history_tool.py  test_agent_workflow_report_tool.py  test_agent_workflow_tool.py  test_append_search_results.py  test_batch_ingest_papers.py  test_chroma_vector_store.py  test_citation_faithfulness_eval.py  test_context_service.py  test_conversation_context_service.py  test_conversation_followup_service.py  test_cross_encoder_reranker.py  test_embedding_providers.py  test_eval_rag_v2_script.py  test_feishu_webhook.py  test_llm_client_responses.py  test_paperweave_naming.py  (+35 more)
(+91 files in other folders)
