[project]
name = "research-reading-agent"
version = "0.1.0"
description = "本地科研论文阅读与整理工作台（FastAPI + Streamlit）"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "A",    # builtins shadowing
    "SIM",  # simplify
]
ignore = [
    "E501",  # 行宽由人工控制（中文注释较多）
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]    # tests 通过 sys.path hack 引入项目根目录
"scripts/*" = ["E402"]  # scripts 同上

[tool.pytest.ini_options]
testpaths = ["tests"]
